postgres-statefulset.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service

spec:
  clusterIP: None #ClusterIP is set to None because our app does not need to connect to Service but to a specific Pod. This is called a Headless service. Headless service will create DNS record like this postgres-0.postgres-service. App connects to these DNS

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres

spec:
  serviceName: postgres-service

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
