service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meal-api-service
spec:
  selector:
    app: meal-api
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
